--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "express-rate-limit": "^8.1.0",
     "file-type": "^21.0.0",
     "helmet": "^8.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "mongoose": "^8.18.1",
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
